fix: page wrapper overflow

--- a/src/entities/components/skeletons/Page/Page.module.scss
+++ b/src/entities/components/skeletons/Page/Page.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 32px;
-  overflow: auto;
 
   @media (width < 1280px) {
     gap: 16px;
